--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,16 +102,16 @@ hr {
 }
 
 .navbar-default {
-    background-color: #3498db;
+    /*background-color: #3498db;*/
     border-color: transparent;
 }
 
 .navbar-default .navbar-brand {
-    color: white;
+    color: black;
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: white;
+    color: black;
 }
 
 
@@ -138,7 +138,7 @@ i {
 
 #headerwrap {
     /* background: url(../img/bg01.jpg) no-repeat center top; */
-    background-color: #3498db;
+    /*background-color: #3498db;*/
     margin-top: -20px;
     background-attachment: relative;
     background-position: center center;
@@ -157,7 +157,7 @@ i {
 #headerwrap h1 {
     /*margin-top: 60px;*/
     margin-bottom: 15px;
-    color: white;
+    /*color: white;*/
     font-size: 45px;
     font-weight: 300;
     letter-spacing: 1px;
@@ -288,7 +288,7 @@ div.phone1 div a:hover {
 }
 
 #discount {
-    color: rgba(255, 239, 0, 0.89);
+    color: #f12b24;
     font-size: 25px;
     font-weight: 600;
 }
@@ -330,6 +330,9 @@ select {
     #video1 {
         width: 100%!important;
     }
+    .textCenter {
+        text-align: center;
+    }
 }
 
 @media (min-width: 769px) {
@@ -344,8 +347,12 @@ select {
     }
 }
 
+.fullWidth {
+    width: 100%!important;
+}
+
 .newCost {
-    color: rgb(255, 216, 0);
+    color: green;
     font-weight: 900;
     font-size: 22px;
 }
@@ -368,6 +375,7 @@ select {
 .botMar {
     margin-bottom: 10px;
 }
+
 .botXsMar {
     margin-bottom: 30px;
 }
@@ -383,9 +391,10 @@ select {
     color: #10658a;
     font-size: 20px;
 }
+
 .round {
     border-radius: 100px;
     width: 150px;
-    height:150px;
+    /*height: 150px;*/
     background-size: contain;
-   }
+}
