--- a/assets/slider/css/styles.css
+++ b/assets/slider/css/styles.css
@@ -93,6 +93,7 @@ p {
 /** Glidejs styles **/
 .slider {
 	position: relative;
+  background-size: contain;
 	width: 100%;
 	height: 500px;
 	overflow: hidden;
