--- a/assets/slider/css/styles.css
+++ b/assets/slider/css/styles.css
@@ -95,7 +95,7 @@ p {
 	position: relative;
   background-size: contain;
 	width: 100%;
-	height: 500px;
+	/*height: 500px;*/
 	overflow: hidden;
 }
 	
